# fcitx5-mcfoxim

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  org.fcitx.Fcitx5.Addon.McFoxIM.json  org.fcitx.Fcitx5.Addon.McFoxIM.metainfo.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
data/: CMakeLists.txt  TW_00.json  TW_01.json  TW_02.json  TW_03.json  TW_04.json  TW_05.json  TW_06.json  TW_07.json  TW_08.json  TW_09.json  TW_10.json  TW_12.json  TW_13.json  TW_14.json  TW_15.json  TW_16.json  TW_17.json  TW_18.json  TW_19.json  TW_20.json  TW_21.json  TW_22.json  TW_23.json  TW_24.json  TW_25.json  TW_26.json  TW_27.json  TW_28.json  TW_29.json  TW_30.json  TW_31.json  TW_32.json  TW_33.json  TW_34.json  TW_35.json  TW_36.json  TW_37.json  TW_38.json  TW_39.json  (+3 more)
po/: CMakeLists.txt  zh_TW.po
src/: CMakeLists.txt  candidate.cpp  candidate.h  completer.cpp  completer.h  config.h  fox-input.conf  fox.conf  fox.cpp  fox.h  fox_TW_00.conf  fox_TW_01.conf  fox_TW_02.conf  fox_TW_03.conf  fox_TW_04.conf  fox_TW_05.conf  fox_TW_06.conf  fox_TW_07.conf  fox_TW_08.conf  fox_TW_09.conf  fox_TW_10.conf  fox_TW_12.conf  fox_TW_13.conf  fox_TW_14.conf  fox_TW_15.conf  fox_TW_16.conf  fox_TW_17.conf  fox_TW_18.conf  fox_TW_19.conf  fox_TW_20.conf  fox_TW_21.conf  fox_TW_22.conf  fox_TW_23.conf  fox_TW_24.conf  fox_TW_25.conf  fox_TW_26.conf  fox_TW_27.conf  fox_TW_28.conf  fox_TW_29.conf  fox_TW_30.conf  (+21 more)
tests/: CMakeLists.txt  test_completer.cpp  test_inputstate.cpp  test_keyhandler.cpp
tools/: convert.py  run.sh
